tests/phpt/errors/002_too_big_tuple_index.php
@kphp_should_fail
<?php

function f() {
  return tuple(1, 2, 3);
}

$x = f()[3];
